More Content, Fixed some layout issues.

--- a/themes/alloc/css/style.css
+++ b/themes/alloc/css/style.css
@@ -1,6 +1,7 @@
 pre {
   white-space: pre-wrap; 
   font-size: 10px;
+  padding: 0;
 }
 
 h1, h2, h3, h4, p, dateline {
@@ -20,6 +21,10 @@ p {
 il {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+blockquote {
+  font-style: italic;
 }
 
 a:hover {
@@ -65,15 +70,24 @@ h4 {
   text-transform: uppercase;
 }
 
+body {
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 #content {
   line-height: 150%;
-  font-size: 100%; 
+  font-size: 100%;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 hr {
   color: #CCCCCC;
   border-width: 0.5px;
   border-style: solid;
+  margin-left: 8px;
 }
 
 iframe {
